ndb - bug#40697 - transaction can wait longer needed during node-failure-handling